# G-Driver-uploader

./: .gitignore  README.md  db.py  logger_setup.py  main.py  notify.py  pyproject.toml  sync.py  sync_settings.json
